# tutor-assistant-app

./: .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
.knowledge/: index.md
agent/: ClassroomAgent.sln  install-agent.ps1  publish.ps1  publish.sh
agent/ClassroomAgent/: AgentConfig.cs  ClassroomAgent.csproj  IdempotencyCache.cs  MessageDispatcher.cs  Program.cs  ScreenCapture.cs  UpdateManager.cs  WebSocketClient.cs  Worker.cs  appsettings.json
agent/ClassroomInstaller/: ClassroomInstaller.csproj  Program.cs  SetupForm.cs  app.manifest
agent/ClassroomUpdater/: ClassroomUpdater.csproj  (+2 more)
attached_assets/: classroom_v2_1775076385722.html
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c32716d8752a_initial.py  f903cd8dfe17_add_result_data_to_command_results.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  commands.py  groups.py  health.py  pcs.py  programs.py  releases.py  tokens.py
backend/app/bot/: handlers.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  command.py  group.py  pc.py  program.py  release.py  token.py  user.py
backend/app/services/: alert_service.py  command_dispatcher.py  login_token_service.py  token_service.py  update_service.py
backend/app/ws/: handlers.py  manager.py
backend/scripts/: create_token.py  seed_programs.py
backend/tests/: test_health.py
docs/: PROJECT_MAP.md
webapp/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+42 files in other folders)
