[project]
name = "classroom-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "packaging>=24.0",
    "python-telegram-bot[ext]>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
